lustre/tests/sanity.sh
@@ -13953,6 +13953,14 @@ test_256() {
 }
 run_test 256 "Check llog delete for empty and not full state"
 
+test_260() {
+#define OBD_FAIL_MDC_CLOSE               0x806
+	$LCTL set_param fail_loc=0x80000806
+	touch $DIR/$tfile
+
+}
+run_test 260 "Check mdc_close fail"
+
 cleanup_test_300() {
 	trap 0
 	umask $SAVE_UMASK
